--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@yireen/squoosh-browser": "^1.0.7",
         "axios": "^1.3.5",
         "clipboard": "2.0.4",
+        "js-base64": "^3.7.6",
         "moment": "^2.29.1",
         "vue": "^3.2.47",
         "vue-router": "^4.1.6"
